Fix: Styling issues in Product Editor around featured product star and variation dimensions spacing (#53707)
* fix: Remove clickable dots around featured product star icon

When clicking the star icon to mark a product as featured, two dots appeared
around the star that were also clickable. This was caused by incorrect styling
of the focus state.

* Fix dimensions fields layout in Variable Products

This commit fixes the layout of dimension fields (length/width/height) in Variable Products options, where the input fields were stuck together without proper spacing. The fix:
- Adds flex display to properly space the fields
- Sets equal widths (33.33%) for each dimension input
- Adds 12px gap between fields

* Add changefile(s) from automation for the following project(s): woocommerce

---------

--- a/plugins/woocommerce/client/legacy/css/admin.scss
+++ b/plugins/woocommerce/client/legacy/css/admin.scss
@@ -3653,6 +3653,10 @@ table.wp-list-table {
 	.column-product_type {
 		width: 48px;
 		text-align: left !important;
+
+		a:focus {
+			box-shadow: none;
+		}
 	}
 
 	.column-customer_message,
@@ -5880,6 +5884,17 @@ img.help_tip {
 		/* Warning asterisk (indicates if there is a problem with a downloadable file). */
 		span.disabled {
 			color: var(--wc-red);
+		}
+	}
+}
+
+.woocommerce_variation .woocommerce_variable_attributes .dimensions_field.form-row {
+	.wrap {
+		display: flex;
+		gap: 12px;
+
+		input {
+			width: 33.33%;
 		}
 	}
 }
